--- a/source/compliance/index.html.slim
+++ b/source/compliance/index.html.slim
@@ -14,30 +14,30 @@ priority: "0.9"
 ---
 - current_page.data.share_image = image_share_platform
 
-= partial "partials/snippets/platform-icons"
+/= partial "partials/snippets/platform-icons"
 
 / section#compliance-top.section-article.container-image-fill.lozad data-background-image="https://images.ctfassets.net/189dvqdsjh46/50WC8N3lz2k0K4o0WQYE4A/96d25d0d7f385f8cfc82950e78285a8a/hex-pattern-light-bg.svg"
   .row.align-center
     .columns.small-12.medium-10.large-9.text-center
       h1.headline-2.group= current_page.data.title
       p.lead= current_page.data.summary
-      / = partial "partials/snippets/button", :locals => { :label => "Get solutions to your compliance challenges", :url => "/demo/", :button_classes => "button success", :item_id => "cta_top-demo", :icon => "icon-angle-down", :icon_align => "right" }
-section#compliance-who
-  .row.align-center.full-width.collapse
-    .columns.flex-container.align-middle.small-12.large-6.bg-gray-3.container-image-fill.lozad data-background-image="https://images.ctfassets.net/189dvqdsjh46/UxwNUvgCQwOgCYEKea6sS/f261741ae95584c903a4d8d69ef3c528/developers__team_workspace_-_annie-spratt-608001-unsplash.jpg?fit=crop&w=1200&h=800"
-      h1.headline-1.text-bold.nomargin.pad--xl.text-center The challenges of compliance are slowing you down
-    .columns.small-12.large-6.bg-gray-10
-      .line-length.pad--xl
-        h3.headline-3
-          | (identifying attributes)
-        h4.headline-4 If you are big…
-        p Large organizations are hesitant to migrate to AWS or Azure because they are concerned compliance requirements aren't being met. When they can't be sure, they stick with old infrastructure.
-        h4.headline-4 If you are new…
-        p Emerging digital products can't break through to their enterprise customers unless they demonstrate compliance and security credibility from Day One. Compliance is central to the business model.
-      .logo-cloud
+section#top.section-article.bg-gray-3.container-image-fill.lozad data-background-image="https://images.ctfassets.net/189dvqdsjh46/UxwNUvgCQwOgCYEKea6sS/f261741ae95584c903a4d8d69ef3c528/developers__team_workspace_-_annie-spratt-608001-unsplash.jpg?fit=crop&w=1600&h=600"
+  .row.align-right.align-middle
+    .columns.small-12.large-6
+      h1.headline-1.text-bold.nomargin.pad--xl.text-center Are you ready for your HITRUST audit?
+section.section-article.bg-gray-12
+  .row.align-center.align-middle
+    .columns.small-12.large-4.xlarge-5
+      h2.headline-4 The burdens of compliance in the cloud are slowing you down.
+      p If you build solutions for healthcare in the cloud, you'll need to pass a HITRUST audit.
+      p HITRUST is the industry standard for achieving HIPAA compliance in the cloud. 
+      = partial "partials/snippets/button", :locals => { :label => "Compliance Solutions", :url => "/compliance#products", :button_classes => "button success", :item_id => "cta_top-products", :icon => "icon-angle-down", :icon_align => "right" }
+    .columns.small-12.large-8.xlarge-7
+      .row.medium-up-5.align-middle.align-center
         - data.views.home.badges.each do |logo|
-          - logo.logoSize == "xlarge" ? logopad = "pad--sm" : nil
-          img alt="#{logo["name"]}" class="logo-cloud--item logo-size--#{logo['logoSize']} lozad #{logopad}" data-src="#{logo["fileUrl"]}" /
+          / - logo.logoSize == "xlarge" ? logopad = "pad--sm" : nil
+          .column
+            img alt="#{logo["name"]}" class="lozad" data-src="#{logo["fileUrl"]}" /
 / .strip-bright
 
 / section#compliance.section-article.bg-gray-11
@@ -46,7 +46,7 @@ section#compliance-who
       h2.headline-2 Understanding Compliance in the Cloud
       p.lead (paragraph on the problems of compliance.) Here are some resources to get you started.
 
-section#video.section-article.bg-gray-3
+/ section#video.section-article.bg-gray-3
   .row.align-center.align-middle
     .columns.small-12.medium-6.large-8.text-center
       = Kramdown::Document.new(data.site.videos["4phTVRUAMMwk4o46qQuSQi"].custom_form).to_html  
@@ -100,7 +100,7 @@ section#products.section-article.bg-gray-3.container-image-fill.lozad data-backg
           h3.headline-4 Compliant Platform  as a Service
           p.lead Build & deploy digital health apps on a compliant, hosted platform
         .card-divider.card-divider--flush
-          = partial "partials/snippets/button", :locals => { :label => "Learn more about CPaaS", :url => "/compliant-platform-as-a-service/", :button_classes => "button hollow hollow-inverted", :item_id => "product-group-cpaas", :icon => "icon-angle-right", :icon_align => "right" }
+          = partial "partials/snippets/button", :locals => { :label => "Learn more about CPaaS", :url => "/compliant-platform-as-a-service/", :button_classes => "button success", :item_id => "product-group-cpaas", :icon => "icon-angle-right", :icon_align => "right" }
       .blob-color.blob-cpaas.z-auto data-glow="false"
     .column.text-center.relative.has-blob
       .card.container-color--trans.relative.z-5
