--- a/source/partials/content/_collection-list.slim
+++ b/source/partials/content/_collection-list.slim
@@ -1,3 +1,4 @@
+/ This partial iterates through a CF collection datatype (itself just a basic entry type, that references others). 
 - collection["related_entries"].each do | entry |
   - type = entry._meta.content_type_id
   - folder = case type
@@ -10,18 +11,24 @@
       - case type
       - when "academy"
         - if entry.has_key?("featured_image")
+          - image = data.site.academy[entry.id].featured_image.url
           a href=url title=entry.title
-            img.lozad.thumbnail src="#{entry.featured_image.url}?fit=thumb&w=800&h=400&q=10" data-src="#{entry.featured_image.url}?fit=thumb&w=800&h=400"
+            img.lozad.thumbnail src="#{image}?fit=thumb&w=800&h=400&q=10" data-src="#{image}?fit=thumb&w=800&h=400"
       - when "blog"
-        a href=url title=entry.title
-          img.lozad.thumbnail src="#{entry.featured_image.url}?fit=thumb&w=800&h=400&q=10" data-src="#{entry.featured_image.url}?fit=thumb&w=800&h=400"
+        - if entry.has_key?("featured_image")
+          - image = data.site.blog[entry.id].featured_image.url
+          a href=url title=entry.title
+            img.lozad.thumbnail src="#{image}?fit=thumb&w=800&h=400&q=10" data-src="#{image}?fit=thumb&w=800&h=400"
       - when "guides"
-        a href=url title=entry.title
-          img.lozad.thumbnail src="#{entry.bg_image.url}?fm=jpg&h=600&q=10" data-src="#{entry.bg_image.url}?&h=600"
+        - if entry.has_key?("bg_image")
+          - image = data.site.guides[entry.id].bg_image.url
+          a href=url title=entry.title
+            img.lozad.thumbnail src="#{image}?fit=thumb&w=800&h=400&q=10" data-src="#{image}?fit=thumb&w=800&h=400"
       - when "webinars"
-        = partial "partials/cards/webinar-poster", :locals => { :entry => entry }
+        = partial "partials/cards/webinar-poster", :locals => { :entry => data.site.webinars[entry.id] }
       - when "discover"
-        = partial "partials/cards/discover", :locals => { :post => entry, :classes => "" }
+        - if entry.has_key?("topic_video")
+          = Kramdown::Document.new(data.site.videos[entry.topic_video.id].custom_form).to_html
     .columns.small-12.medium-6.large-5.xlarge-5
       h5.subhead--spaced = type.capitalize
       h3.headline-4
