--- a/source/pricing/index.html.slim
+++ b/source/pricing/index.html.slim
@@ -9,7 +9,7 @@ customCSS: "pricing"
 layout: "basic"
 priority: "1.0"
 ---
-.strip-bright.strip-bright--small
+.strip-bright.strip-small
 .container-color--gray-light
   .container-image--fixed(data-interchange="[https://images.ctfassets.net/189dvqdsjh46/31Xr7kD9GUu8gYo6IOISac/b72aedc4ed520f1ad4ae78a24109838f/bg-weave-light.png?w=2200&h=1000&fm=jpg, large]")
     = partial "partials/head/header", :locals => { :style => "dark" }
