--- a/source/compliance/index.html.slim
+++ b/source/compliance/index.html.slim
@@ -13,31 +13,89 @@ collectionName: "product"
 priority: "0.9"
 ---
 - current_page.data.share_image = image_share_platform
+- featured_img = "https://images.ctfassets.net/189dvqdsjh46/4GKMkqZcNGCySO6EAaYAIU/a7116a7de2da363b678930224e79d8b7/thoughtful-businesswoman-by-glass-window-gm555250401-555250401.jpg"
 
 /= partial "partials/snippets/platform-icons"
+section.hide-for-medium
+  .row.collapse
+    .columns.small-12
+      img.lozad.object-fit data-src="#{featured_img}?fit=thumb&w=800&h=400" alt="Woman looking out of a window"
+      .bg-white.pad--lg
+        h1.headline-1 Can your app pass a HITRUST audit?
+        h2.headline-3.text-bold.group--2x With CCMS, the answer is yes.
+        p.lead <strong>Get back to solving problems for healthcare.</strong> Let Datica take on the burden of compliance. We're the experts at understanding the exact policies and procedures required to turn HIPAA-eligible services on the public cloud into architectures that can pass a HITRUST CSF assessment. That expertise is passed on to you through our products and rock-solid BAA.
+        .text-right
+          = partial "partials/snippets/button", :locals => { :label => "See how it works", :url => "/cloud-compliance-management-system#cta", :button_classes => "button nomargin", :item_id => "cta_top-products", :icon => "icon-angle-right", :icon_align => "right" }
+section#top.show-for-medium.section-article.pad-no-bottom.bg-gray-3.container-image--center.lozad data-background-image=featured_img
+  .row.align-left.align-middle
+    .columns.small-12.medium-6
+      h1.headline-1 Can your app pass a HITRUST audit?
+      h2.headline-3.text-bold.group--2x With CCMS, the answer is yes.
+      .bg-white.pad--lg.drop.pull-down
+        p.lead <strong>Get back to solving problems for healthcare.</strong> Let Datica take on the burden of compliance. We're the experts at understanding the exact policies and procedures required to turn HIPAA-eligible services on the public cloud into architectures that can pass a HITRUST CSF assessment. That expertise is passed on to you through our products and rock-solid BAA.
+        = partial "partials/snippets/button", :locals => { :label => "See how it works", :url => "/cloud-compliance-management-system#cta", :button_classes => "button nomargin", :item_id => "cta_top-products", :icon => "icon-angle-right", :icon_align => "right" }
 
-/ section#compliance-top.section-article.container-image-fill.lozad data-background-image="https://images.ctfassets.net/189dvqdsjh46/50WC8N3lz2k0K4o0WQYE4A/96d25d0d7f385f8cfc82950e78285a8a/hex-pattern-light-bg.svg"
-  .row.align-center
-    .columns.small-12.medium-10.large-9.text-center
-      h1.headline-2.group= current_page.data.title
-      p.lead= current_page.data.summary
-section#top.section-article.bg-gray-3.container-image-fill.lozad data-background-image="https://images.ctfassets.net/189dvqdsjh46/UxwNUvgCQwOgCYEKea6sS/f261741ae95584c903a4d8d69ef3c528/developers__team_workspace_-_annie-spratt-608001-unsplash.jpg?fit=crop&w=1600&h=600"
-  .row.align-right.align-middle
-    .columns.small-12.large-6
-      h1.headline-1.text-bold.nomargin.pad--xl.text-center Are you ready for your HITRUST audit?
-section.section-article.bg-gray-12
-  .row.medium-up-5.large-up-7.align-middle.align-center.group
-    - data.views.home.badges.each do |logo|
-      - logo.logoSize == "xlarge" ? logopad = "pad--sm" : nil
-      .column
-        img alt="#{logo["name"]}" class="lozad #{logopad}" data-src="#{logo["fileUrl"]}" /
-  .row.align-center.align-middle
+.strip-bright
+section#compliance-products.section-article.bg-gray-3.container-image-fill.lozad data-background-image="https://images.ctfassets.net/189dvqdsjh46/6OKt8JnNqo86wQIgOqiGcs/232794aa517af9870472dd34726ef595/hex-pattern-dark-bg.svg"
+  .row
+    .columns.small-12.medium-12.large-8
+      h2.headline-2.card-section Compliance Solutions
+  .row.align-center.small-up-1.medium-up-1.large-up-3.row--card-grid
+    .column.relative.has-blob
+      .card.container-color--trans.relative.z-5
+        .card-section
+          = inline_svg("cks-logo-w", class: "icon-size--xlarge")
+          .subhead--spaced CKS
+          h3.headline-4 Compliant Kubernetes Service
+          p.strip.strip-small.strip-cks
+          p.lead Get enterprise scalability for your complex digital health application on a compliant Kubernetes cluster
+          p Datica Compliant Kubernetes Service gives you the orchestration and scalable power of Kubernetes with compliance built in.
+        .card-divider.card-divider--flush
+          = partial "partials/snippets/button", :locals => { :label => "Learn more about CKS", :url => "/compliant-kubernetes-service/", :button_classes => "button button--light", :item_id => "product-group-cks", :icon => "icon-angle-right", :icon_align => "right" }
+      .blob-color.blob-cks.z-auto data-glow="false"
+    .column.relative.has-blob
+      .card.container-color--trans.relative.z-5
+        .card-section
+          = inline_svg("cpaas-logo-w", class: "icon-size--xlarge")
+          .subhead--spaced CPaaS
+          h3.headline-4 Compliant Platform <br />as a Service
+          p.strip.strip-small.strip-cpaas
+          p.lead Build and deploy a digital health application on a compliant hosted platform
+          p Datica Compliant Platform as a Service gives startups pre-packaged compliance and security. CPaaS makes hosting your compliant healthcare applications as simple as git push.
+        .card-divider.card-divider--flush
+          = partial "partials/snippets/button", :locals => { :label => "Learn more about CPaaS", :url => "/compliant-platform-as-a-service/", :button_classes => "button button--light", :item_id => "product-group-cpaas", :icon => "icon-angle-right", :icon_align => "right" }
+      .blob-color.blob-cpaas.z-auto data-glow="false"
+    .column.relative.has-blob
+      .card.container-color--trans.relative.z-5
+        .card-section
+          = inline_svg("ccms-logo-w", class: "icon-size--xlarge")
+          .subhead--spaced CCMS
+          h3.headline-4 Cloud Compliance Management System 
+          p.strip.strip-small.strip-ccms
+          p.lead Know the precise compliance state of your cloud environments
+          p Datica Cloud Compliance Management System is the first-ever tool to guarantee compliance assurance of managed cloud-native services. Our dashboard and reports enable you to continuously monitor compliance, react quickly to risks and incidents, and attest to compliance for audits.
+        .card-divider.card-divider--flush
+          = partial "partials/snippets/button", :locals => { :label => "Learn more about CCMS", :url => "/cloud-compliance-management-system/", :button_classes => "button button--light", :item_id => "product-group-ccms", :icon => "icon-angle-right", :icon_align => "right" }
+      .blob-color.blob-ccms.z-auto data-glow="false"
+
+
+section.section-article.pad-no-bottom.bg-gray-12
+  .row.align-center.align-middle.group--2x
     .columns.small-12.large-8.text-center
-      h2.headline-4 The burdens of compliance in the cloud are slowing you down.
-      p If you build solutions for healthcare in the cloud, you'll need to pass a HITRUST audit.
-      p HITRUST is the industry standard for achieving HIPAA compliance in the cloud. 
-      = partial "partials/snippets/button", :locals => { :label => "Compliance Solutions", :url => "/compliance#compliance-products", :button_classes => "button success", :item_id => "cta_top-products", :icon => "icon-angle-down", :icon_align => "right" }
-/ .strip-bright
+      h2.headline-4 Datica helps you comply with multiple compliance frameworks.
+      .row.medium-up-5.align-middle.align-center
+        - data.views.home.badges.each do |logo|
+          - logo.logoSize == "xlarge" ? logopad = "pad--sm" : nil
+          .column
+            img alt="#{logo["name"]}" class="lozad" data-src="#{logo["fileUrl"]}" /
+  .row.align-center.align-middle.group style="overflow: hidden;"
+    .columns.small-12.large-8.text-center
+      h2.headline-4 Datica Global Compliance Posture
+      p.lead.text-center Datica's stringent compliance posture makes us compliant with many global standards.
+      = partial "partials/snippets/button", :locals => { :label => "Explore global compliance", :url => "/compliance/global/", :button_classes => "button hollow group", :item_id => "compliance-global", :icon => "icon-angle-right", :icon_align => "right" }
+      a href="/compliance/global/" title="Global Compliance Table"
+        - preview = "https://images.ctfassets.net/189dvqdsjh46/4KtjQwGLOo6UGoAY82qe6k/dd058456a0fef3d725cd5fc8a1713840/global_compliance_stance_table.png"
+        img.lozad.drop alt="Global Compliance Table" src="#{preview}?w=1200&fm=jpg&q=5" data-src="#{preview}?w=1200&fm=png&fl=png8"
 
 section#resources.section-article.collection.bg-gray-11
   - related_entries = data.site.collections.to_a.select { |id, entry | (id == "2xAKQVZSKIsygICqimW0qA") }
@@ -48,43 +106,6 @@ section#resources.section-article.collection.bg-gray-11
         - if collection.has_key?("desc")
           p.lead.line-length.margin-auto = collection.desc
     = partial "/partials/content/collection-list", :locals => { :collection => collection }
-
-section#compliance-products.section-article.bg-gray-3.container-image-fill.lozad data-background-image="https://images.ctfassets.net/189dvqdsjh46/6OKt8JnNqo86wQIgOqiGcs/232794aa517af9870472dd34726ef595/hex-pattern-dark-bg.svg"
-  .row.align-center
-    .columns.small-12.medium-12.large-8.text-center
-      h2.headline-2 Compliance Solutions
-  .row.align-center.small-up-1.medium-up-2.large-up-3.row--card-grid
-    .column.text-center.relative.has-blob
-      .card.container-color--trans.relative.z-5
-        .card-section
-          = inline_svg("cks-logo-w", class: "icon-size--xlarge")
-          .subhead--spaced CKS
-          h3.headline-4 Compliant  Kubernetes<br /> Service
-          p.lead Get the scalable power of Kubernetes in a secure cluster
-        .card-divider.card-divider--flush
-          = partial "partials/snippets/button", :locals => { :label => "Learn more about CKS", :url => "/compliant-kubernetes-service/", :button_classes => "button hollow hollow-inverted", :item_id => "product-group-cks", :icon => "icon-angle-right", :icon_align => "right" }
-      .blob-color.blob-cks.z-auto data-glow="false"
-    .column.text-center.relative.has-blob
-      .card.container-color--trans.relative.z-5
-        .card-section
-          = inline_svg("ccms-logo-w", class: "icon-size--xlarge")
-          .subhead--spaced CCMS
-          h3.headline-4 Cloud Compliance Management System
-          p.lead Know the precise compliance state of your cloud environments
-        .card-divider.card-divider--flush
-          = partial "partials/snippets/button", :locals => { :label => "Learn more about CCMS", :url => "/cloud-compliance-management-system/", :button_classes => "button success", :item_id => "product-group-ccms", :icon => "icon-angle-right", :icon_align => "right" }
-      .blob-color.blob-ccms.z-auto data-glow="false"
-    .column.text-center.relative.has-blob
-      .card.container-color--trans.relative.z-5
-        .card-section
-          = inline_svg("cpaas-logo-w", class: "icon-size--xlarge")
-          .subhead--spaced CPaaS
-          h3.headline-4 Compliant Platform  as a Service
-          p.lead Build & deploy digital health apps on a compliant, hosted platform
-        .card-divider.card-divider--flush
-          = partial "partials/snippets/button", :locals => { :label => "Learn more about CPaaS", :url => "/compliant-platform-as-a-service/", :button_classes => "button hollow hollow-inverted", :item_id => "product-group-cpaas", :icon => "icon-angle-right", :icon_align => "right" }
-      .blob-color.blob-cpaas.z-auto data-glow="false"
-.strip-bright
 
 / aside#ctaBottom.container-color--dark-grad-blue
   .section-article.container-image--center data-interchange="[/public/img/art/platform-iso-illustration-bg.svg, small]"
