--- a/source/assets/scss/modules/images.scss
+++ b/source/assets/scss/modules/images.scss
@@ -136,6 +136,17 @@ figcaption{
 .lozad.loaded {
     opacity: 1;
 }
+.blur-in {
+    &.lozad {
+        @include blur(1vw);
+        transition: opacity 0.3s, filter 0.3s, -webkit-filter 0.3s, -moz-filter 0.3s, -o-filter 0.3s, -ms-filter 0.3s;
+    }
+    &.lozad.loaded {
+        @include blur(0);
+        -webkit-transition-delay: 1s;
+        transition-delay:         1s;
+    }
+}
 // .container--image-fit {
 //     position: relative;
 //     overflow: hidden;
